2002-11-25  Richard Williamson   <rjw@apple.com>

        Cleanup up leaking objects in page cache.
        
        * kwq/KWQKHTMLPart.mm:
        (KWQKHTMLPart::openURLFromPageCache):
        * kwq/WebCoreBridge.mm:
        (-[KWQPageState initWithDocument:DOM::URL:windowProperties:KJS::locationProperties:KJS::]):
        (-[KWQPageState dealloc]):

2002-11-25  Richard Williamson   <rjw@apple.com>

        Added check for non-nil doc.
        
        * kwq/KWQKHTMLPart.mm:
        (KWQKHTMLPart::setView):

2002-11-25  David Hyatt  <hyatt@apple.com>

	Fix for the DHTML on hrweb.  With these changes it works
	except for some odd vertical spacing issues.
	
        * khtml/rendering/render_flow.cpp:
        (RenderFlow::addChildToFlow):
        (RenderFlow::makeChildrenNonInline):

2002-11-25  Richard Williamson   <rjw@apple.com>

        Tweaked some debugging info.
        
        * khtml/xml/dom_docimpl.cpp:
        (DocumentImpl::~DocumentImpl):
        (DocumentImpl::detach):

2002-11-25  Chris Blumenberg  <cblu@apple.com>

	Use ^= to refer to OBJECTs with TYPEs that start with "image/". This is better than hard-coding image mime types.

        * khtml/css/html4.css:

2002-11-25  Chris Blumenberg  <cblu@apple.com>

	Fixed: 2987001 - spurious mime-type errors from <object> images

	KHTML didn't seem to have any clean support for OBJECT tags that are images. Added support for that.

        * khtml/css/html4.css: OBJECTs that are images should be rendered inline
        * khtml/html/html_objectimpl.cpp:
        (HTMLObjectElementImpl::attach): if the type is an image, create a render image
        * khtml/rendering/render_image.cpp:
        (RenderImage::updateFromElement): if the element is an object, use DATA for the URL
        * kwq/KWQDOMNode.cpp:
        (isImage): if it is an OBJECT element, check the type
        * kwq/WebCoreBridge.mm:
        (-[WebCoreBridge elementAtPoint:]): if the element is an object, use DATA for the URL
