@@ -1,3 +1,12 @@
+2002-11-26  David Hyatt  <hyatt@apple.com>
+
+	Fix render object removal to remerge adjacent anonymous inline boxes
+	when an intervening block box gets removed.
+	
+        * khtml/rendering/render_flow.cpp:
+        (RenderFlow::removeChild):
+        * khtml/rendering/render_flow.h:
+
 2002-11-25  Richard Williamson   <rjw@apple.com>
 
         Cleanup up leaking objects in page cache.
